<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="action_settings">Settingss</string>
    <string name="app_name">TheGamesDB</string>
    <string name="arrow">arrow</string>
    <string name="search_games">Searching for games&#8230;</string>
    <string name="coop">Co-op</string>
    <string name="details">Details</string>
    <string name="developer">Developer</string>
    <string name="genres">Genres</string>
    <string name="load_game">Loading your game&#8230;</string>
    <string name="logo">logo</string>
    <string name="players">Players</string>
    <string name="preferences">preferences</string>
    <string name="publisher">Publisher</string>
    <string name="overview">Overview</string>
    <string name="release_date">Releasedate</string>
    <string name="search">search</string>
    <string name="sorting">sorting</string>
    <string name="title_activity_game_list">GameListActivity</string>
    <string name="title_activity_game_overview">GameOverviewActivity</string>
    <string name="title_activity_game_list_fragment">GameListFragment</string>
    <string name="title_activity_image_zoom">ImageZoom</string>
    <string name="hello_world">Hello world!</string>

</resources>