<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp" >

    <RelativeLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="10dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="10dp" >

    <TextView
        android:id="@+id/gamePlatform"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/gameName"
        android:layout_below="@+id/gameName"
        android:paddingLeft="5dp" />

    <TextView
        android:id="@+id/gameName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/gameThumb"
        android:layout_toRightOf="@+id/gameThumb"
        android:paddingLeft="5dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold" />

    <ImageView
        android:contentDescription="@string/logo"
        android:id="@+id/gameThumb"
        android:layout_width="130dp"
        android:layout_height="180dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:maxHeight="180dp"
        android:maxWidth="130dp"
        android:paddingLeft="10dp"
        android:src="@drawable/crysis" />

    <TextView
        android:id="@+id/details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/gameThumb"
        android:background="@color/darkGreen"
        android:text="@string/details"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <TableLayout
        android:id="@+id/gameInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/details"
        android:layout_marginTop="14dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" >

        <TableRow
            android:id="@+id/playerRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/gamePlayers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/players" />
            
            <TextView
                android:id="@+id/gamePlayersTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp" />

        </TableRow>

        <TableRow
            android:id="@+id/coopRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/gameCoop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/coop" />
            
            <TextView
                android:id="@+id/gameCoopTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp" />

        </TableRow>

        <TableRow
            android:id="@+id/genresRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/gameGenres"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/genres" />
            
            <TextView
                android:id="@+id/gameGenresTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp" />

        </TableRow>

        <TableRow
            android:id="@+id/releaseRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/gameRelease"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/release_date" />
            
            <TextView
                android:id="@+id/gameReleaseTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp" />

        </TableRow>

        <TableRow
            android:id="@+id/publisherRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/gamePublisher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/publisher" />
            
            <TextView
                android:id="@+id/gamePublisherTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp" />

        </TableRow>

        <TableRow
            android:id="@+id/developerRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/gameDeveloper"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/developer" />
            
            <TextView
                android:id="@+id/gameDeveloperTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp" />

        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/overview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/gameInfo"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_marginTop="14dp"
        android:background="@color/darkGreen"
        android:text="@string/overview"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/overviewTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/overview"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" />

</RelativeLayout>
</ScrollView>